discussion/kv_engine/160007/160007_rev10_discussion.txt
======================================================================================================================
DESCRIPTION:

Not for review: nexus variants/config

Change-Id: Ic22a4b6c55c0586db2135338b57ba5032980d8b4

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-09-08 15:24:59.000000000
Message: 
Uploaded patch set 10: Patch Set 9 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-08 15:27:28.000000000
Message: 
Patch Set 10: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12101/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.h:549:22: error: member access into incomplete type "SynchronousEPEngine" [clang-diagnostic-error]
        return engine->getConfiguration().getBackend() == "nexus" &&
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/mock/mock_synchronous_ep_engine_fwd.h:16:7: note: forward declaration of "SynchronousEPEngine"
class SynchronousEPEngine;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12101/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.h:549:22:
error: member access into incomplete type "SynchronousEPEngine" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12101/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/10892/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
